Replace nginx.conf for frontend nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,23 +1,14 @@
 # Default server configuration
 #
-server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+daemon off;
+worker_processes 1;
 
-	SSL configuration
-	
-	listen 443 ssl default_server;
-	 listen [::]:443 ssl default_server;
+events { worker_connections 1024; }
 
-	root /var/www/html;
+http {
 
-	index index.html index.htm index.nginx-debian.html;
+    sendfile on;
 
-	server_name _;
-
-	location / {
-		try_files $uri $uri/ =404;
-	}
-
+    include /etc/nginx/sites-enabled/*;
 }
 
