--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,14 @@
 # Utilitzar com a base: node
-FROM node:release
+FROM node:latest
 # Clone repository
+# * Node image already have git so no apt-get install git needed
 RUN mkdir -p /opt
 RUN cd /opt && git clone https://github.com/gisce/oraKWlum-frontend.git 
 # Install node dependencies
 RUN cd /opt/oraKWlum-frontend && npm install
 # Build page
-RUN cd /tmp/node/oraKWlum-frontend && ./utils/build.sh
+RUN chmod +x /opt/oraKWlum-frontend/utils/build.sh
+RUN cd /opt/oraKWlum-frontend && utils/build.sh
 # Copy page to nginx output
 RUN rm -rf /var/www
 RUN cp -r /opt/oraKWlum-frontend/www /var/www
@@ -14,9 +16,15 @@ RUN cp -r /opt/oraKWlum-frontend/www /var/www
 RUN chmod -R +r /var/www
 # Install nginx
 RUN apt-get update
-RUN apt-get install build-essential nginx
+RUN apt-get -y install build-essential nginx
 # Set nginx config file
 RUN cp /opt/oraKWlum-frontend/conf/production.conf /etc/nginx/sites-enabled/default
 # Expose HTTP Contents
 EXPOSE 80
 EXPOSE 443
+# Replace nginx config file 
+RUN rm /etc/nginx/nginx.conf
+ADD nginx.conf /etc/nginx/nginx.conf
+# Create default logs directories
+RUN mkdir -p /var/log/orakwlum/
+
