--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -27,4 +27,6 @@ RUN rm /etc/nginx/nginx.conf
 ADD nginx.conf /etc/nginx/nginx.conf
 # Create default logs directories
 RUN mkdir -p /var/log/orakwlum/
-
+# Add runnable script to start nginx patching host name
+ADD run_frontend.sh run_frontend.sh
+RUN chmod 700 run_frontend.sh
